tests/ui/coroutine/retain-resume-ref.stderr
error[E0499]: cannot borrow `thing` as mutable more than once at a time
  --> $DIR/retain-resume-ref.rs:24:25
   |
LL |     gen.as_mut().resume(&mut thing);
   |                         ---------- first mutable borrow occurs here
LL |     gen.as_mut().resume(&mut thing);
   |                  ------ ^^^^^^^^^^ second mutable borrow occurs here
   |                  |
   |                  first borrow later used by call

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0499`.
